<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="detailGame"
            type="com.org.gamecatalog.ui.detailgame.DetailGameItemUiState" />
    </data>

    <GridLayout
        android:columnCount="2"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_title_platform"
            android:layout_columnWeight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_platform" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_title_genre"
            android:layout_columnWeight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_genre"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_title_platform"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_platforms"
            android:layout_columnWeight="1"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:textSize="12sp"
            android:text="@{detailGame.platforms}"
            android:textColor="@color/white"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_genres"
            android:layout_columnWeight="1"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:text="@{detailGame.genres}"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_title_website"
            android:layout_marginTop="16dp"
            android:layout_columnWeight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_website" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_title_publisher"
            android:layout_marginTop="16dp"
            android:layout_columnWeight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_publisher" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_website"
            android:layout_columnWeight="1"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_publisher"
            android:layout_columnWeight="1"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:text="@{detailGame.publishers}"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

    </GridLayout>
</layout>